--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
   },
   "dependencies": {
     "discord.js": "11.1.0",
-    "request": "2.81.0" ,
-    "youtube-dl": "1.12.2" ,
-    "ytdl-core": "github:fent/node-ytdl-core#master" ,
-    "ffmpeg-binaries": "3.2.2-3" ,
-    "node-opus": "0.2.7" ,
-    "json-file": "0.1.0"
+    "request": "2.81.0"
   }
 }
