--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "discord.js": "11.1.0",
     "request": "2.81.0",
-    "jquery": "3.3.1"
+    "jquery": "3.3.1",
+    "node-jsdom": "3.1.5"
   }
 }
