--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "discord.js": "11.1.0",
     "request": "2.81.0",
     "jquery": "3.3.1",
-    "node-jsdom": "3.1.5"
+    "jsdom": "11.10.0"
   }
 }
