--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   },
   "dependencies": {
     "discord.js": "11.1.0",
-    "request": "2.81.0",
-    "jquery": "3.3.1",
-    "jsdom": "11.10.0"
+    "request": "2.81.0"
   }
 }
